--- a/static/cube.css
+++ b/static/cube.css
@@ -57,3 +57,9 @@ button.reset {
 button.reset:hover {
     background-color: #d32f2f;
 }
+button.scramble {
+    background-color: #ff9800;
+}
+button.scramble:hover {
+    background-color: #f57c00;
+}
